tests/pass/parse/group/zero.leo
function main() {
    let element = 0group;
}