tests/fail/parse/syntax/console_fail.leo
function main() {
    let console = 0u32;
}